fix code in dark mode

--- a/assets/style/_typographie.sass
+++ b/assets/style/_typographie.sass
@@ -85,6 +85,8 @@ h1, h2, h3, h4, h5, h6
       font-style: italic
       font-size: 1.1rem
       padding: .1rem .4rem
+      @media (prefers-color-scheme: dark)
+        color: $color-primary
   &.stable-color
     h1, h2, h3, h4, h5,strong , p, a, li
       color: $color-primary
